--- a/css/styles.css
+++ b/css/styles.css
@@ -23,10 +23,10 @@ body {
   background-color: #B4BA00;
 }
 
-#avengersContainer {
+#avengersContainer, #gotgContainer {
   display: grid;
   margin: auto;
-  width: 99%;
+  width: 90%;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
   grid-template-rows: 1fr;
@@ -67,7 +67,7 @@ body {
   letter-spacing: 2px;
   color: white;
   margin-bottom: 10px;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 .heroBanner {
