--- a/css/styles.css
+++ b/css/styles.css
@@ -20,14 +20,14 @@ body {
 }
 
 #gotgTitle {
-  background-color: #B4BA00;
+  background-color: #F9B32F;
 }
 
 #villainsTitle {
   background-color: #3E005D;
 }
 
-#avengersContainer, #gotgContainer {
+#avengersContainer, #gotgContainer, #villainsContainer {
   display: grid;
   margin: auto;
   margin-bottom: 20px;
@@ -50,7 +50,6 @@ body {
 }
 
 .heroTitle {
-  background-color: #0067B0;
   font-family: 'Roboto';
   letter-spacing: 2px;
   color: white;
@@ -59,6 +58,18 @@ body {
   margin-bottom: 10px;
   width: 100%;
   font-size: 1.3em;
+}
+
+#avengersContainer .heroTitle {
+  background-color: #0067B0;
+}
+
+#gotgContainer .heroTitle {
+  background-color: #BA0087;
+}
+
+#villainsContainer .heroTitle {
+  background-color: #9A0038;
 }
 
 .heroBanner {
@@ -87,7 +98,7 @@ body {
 }
 
 @media only screen  and (max-width : 1450px) {
-#avengersContainer, #gotgContainer {
+#avengersContainer, #gotgContainer, #villainsContainer {
   grid-template-columns: 1fr 1fr 1fr;
   width: 70%;
   grid-gap: 0px;
@@ -101,15 +112,19 @@ body {
   height: 300px;
 }
 
+.groupTitle {
+  width: 85%;
+}
+
 }
 
 @media only screen  and (max-width : 1150px) {
-#avengersContainer, #gotgContainer {
+#avengersContainer, #gotgContainer, #villainsContainer {
   grid-template-columns: 1fr 1fr;
 }
 }
 
 @media only screen  and (max-width : 900px) {
-#avengersContainer, #gotgContainer {
+#avengersContainer, #gotgContainer, #villainsContainer {
   grid-template-columns: 1fr;
 }
