--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  background-color: #252830;
+  background-color: #1C2A39;
 }
 
 .groupTitle {
@@ -17,6 +17,7 @@ body {
 
 #avengersTitle {
   background-color: #D73C2C;
+  margin-top: 10px;
 }
 
 #gotgTitle {
@@ -27,22 +28,19 @@ body {
   background-color: #3E005D;
 }
 
-#avengersContainer, #gotgContainer, #villainsContainer {
+#shieldTitle {
+  background-color: #657576;
+}
+#avengersContainer, #gotgContainer, #villainsContainer, #shieldContainer {
   display: grid;
   margin: auto;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 30px;
   width: 90%;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
   grid-template-rows: 1fr;
 }
-
-
-.heroBackgroundImage {
-  background-position: center;
-}
-}
-
 
 #avengers {
   padding-top: 20px;
@@ -58,6 +56,8 @@ body {
   margin-bottom: 10px;
   width: 100%;
   font-size: 1.3em;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 #avengersContainer .heroTitle {
@@ -72,44 +72,57 @@ body {
   background-color: #9A0038;
 }
 
+#shieldContainer .heroTitle {
+  background-color: #000;
+}
+
 .heroBanner {
   margin: auto;
+  height: 300px;
   width: 100%;
   text-align: center;
   overflow: hidden;
 }
 
+.heroBackgroundImageContainer {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
 .heroBackgroundImage {
-  height: 400px;
+  height: 100%;
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   transition: 0.3s ease-in;
   cursor: pointer;
   box-shadow: inset 0 0 50px black;
-
+  background-position: center;
 }
 
-.heroBackgroundImage:hover {
-  /* background-size: 110%; */
 
+
+.heroBackgroundImageContainer:hover .heroBackgroundImage,
+.heroBackgroundImageContainer:focus .heroBackgroundImage {
+  transform: scale(1.5);
   border-radius: 0px 0px 25px 25px;
   box-shadow: inset 0 0 100px black;
 }
 
 @media only screen  and (max-width : 1450px) {
-#avengersContainer, #gotgContainer, #villainsContainer {
+#avengersContainer, #gotgContainer, #villainsContainer, #shieldContainer {
   grid-template-columns: 1fr 1fr 1fr;
-  width: 80%;
+  width: 70%;
   grid-gap: 10px;
 }
 
 .heroBanner {
-  width: 300px;
+  width: 250px;
 }
 
 .heroBackgroundImage {
-  height: 300px;
+  height: 100%;
 }
 
 .groupTitle {
@@ -119,12 +132,12 @@ body {
 }
 
 @media only screen  and (max-width : 1150px) {
-#avengersContainer, #gotgContainer, #villainsContainer {
+#avengersContainer, #gotgContainer, #villainsContainer, #shieldContainer {
   grid-template-columns: 1fr 1fr;
 }
 }
 
 @media only screen  and (max-width : 900px) {
-#avengersContainer, #gotgContainer, #villainsContainer {
+#avengersContainer, #gotgContainer, #villainsContainer, #shieldContainer {
   grid-template-columns: 1fr;
 }
