--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
   width: 95%;
   border-radius: 10px;
   font-family: 'Titillium Web';
+  letter-spacing: 4px;
 }
 
 #avengersTitle {
@@ -105,9 +106,46 @@ body {
 
 .heroBackgroundImageContainer:hover .heroBackgroundImage,
 .heroBackgroundImageContainer:focus .heroBackgroundImage {
-  transform: scale(1.5);
-  border-radius: 0px 0px 25px 25px;
-  box-shadow: inset 0 0 100px black;
+  transform: scale(1.3);
+  filter: blur(1px);
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 @media only screen  and (max-width : 1450px) {
