--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ body {
 
 
 
+
 .heroBackgroundImageContainer:hover .heroBackgroundImage,
 .heroBackgroundImageContainer:focus .heroBackgroundImage {
   transform: scale(1.3);
@@ -129,16 +130,18 @@ body {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
     width: 80%;
+    display: grid;
+    grid-template-columns: 95% 5%;
 }
 
 /* The Close Button */
 .close {
     color: #aaaaaa;
-    float: right;
+    /* float: right; */
     font-size: 28px;
     font-weight: bold;
+    margin:  auto;
 }
 
 .close:hover,
@@ -146,6 +149,26 @@ body {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.heroModalName {
+  text-align: center;
+}
+
+.modalGridItem {
+  margin: auto;
+}
+
+.closeButton {
+  margin: auto;
+}
+
+#heroModalNameContainer {
+  width: 80%;
+  border-bottom: 1px solid #A0A0A0;
+  font-family: 'Roboto';
+  color: #505050;
+  letter-spacing: 2px;
 }
 
 @media only screen  and (max-width : 1450px) {
