--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,57 @@
 body {
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   background-color: #1C2A39;
 }
 
 #inputKeys {
+  display: flex;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: 100vh;
+}
+
+#form {
+  width: 80%;
+  margin: 0 auto;
+}
+
+label {
+  color: #C0C0C0;
+  font-family: 'Roboto';
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 40px;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #3E005D;
+    color: white;
+    padding: 20px 20px;
+    border: 5px solid #3E005D;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.1s linear;
+    font-family: 'Titillium Web';
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+input[type=submit]:hover {
+    background-color: transparent;
+    border: 5px solid #3E005D;
 }
 
 #characters {
