--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ input[type=submit] {
     border: 5px solid #3E005D;
     border-radius: 4px;
     cursor: pointer;
-    transition: 0.1s linear;
+    transition: 0.4s;
     font-family: 'Titillium Web';
     font-size: 20px;
     text-transform: uppercase;
@@ -56,6 +56,38 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: transparent;
     border: 5px solid #3E005D;
+}
+
+label span {
+  color: #B71C0C;
+}
+
+.loader {
+  display: none;
+  border: 16px solid #0057A0;
+  border-radius: 50%;
+  border-top: 16px solid #D73C2C;
+  width: 120px;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 #characters {
@@ -73,7 +105,7 @@ input[type=submit]:hover {
   text-align: center;
   display: inline;
   font-family: 'Roboto';
-  padding: 2px;
+  padding: 6px;
 }
 .groupTitle {
   font-size: 30px;
